--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>   
     <nav>
         <div class="scrollmenu">
-            <a href="Home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="About.html">About</a>
             <a href="Gallery.html"> Gallery</a>
         
