--- a/About.html
+++ b/About.html
@@ -13,7 +13,7 @@
     </header>
     <nav>
         <div class="scrollmenu">
-            <a href="untitled1.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="About.html">About</a>
             <a href="Gallery.html"> Gallery</a>
         
