--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,7 @@
 </header>
 <nav>
     <div class="scrollmenu">
-        <a href="untitled1.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="About.html">About</a>
         <a href="Gallery.html"> Gallery</a>
     
