--- a/Contact.html
+++ b/Contact.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <link href="D2.css" rel="stylesheet" type="text/css">
+    
+<meta charset="utf-8">
+<title>Y&D Legal</title>
 </head>
 <body>
 <header>
