--- a/About.html
+++ b/About.html
@@ -4,7 +4,7 @@
 <link href="D2.css" rel="stylesheet" type="text/css"> 
  
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>Y&D Legal</title>
 </head>
 
 <body>
