--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link href="D2.css" rel="stylesheet" type="text/css">     
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>Y&D Legal</title>
 </head>
 
 <body>
