--- a/About.html
+++ b/About.html
@@ -57,12 +57,12 @@ Think Once, Think Twice, Think Service & Delivery...
 </section>
 
 <section id="B4">
-<h1>Our higly-expierience staff are equpped to tackle any challenges</h1>
+<h1>Our highly-expierience staff are equipped to tackle any challenges</h1>
 
-<p>Our higly-expierience staff are equpped to tackle any challenges</p>
-<p>while maintaining a professionel and respetful relationship with our clinets</p>
+<p>Our highly-expierience staff are equipped to tackle any challenges</p>
+<p>while maintaining a professionel and respectful relationship with our clients</p>
 <p>Y & D Legal Courier Services assists attorneys,conveyancer and other</p>
-<p>professionals with our broad based services whice inlcludes:
+<p>professionals with our broad based services which includes:
 </p>
 </section>
 
@@ -83,7 +83,7 @@ Think Once, Think Twice, Think Service & Delivery...
 
 <section id="B7">
 <h1>LOCATION & UPLIFTMENT</h1>
-<p>High court (CASELINES)<p>
+<p>High court (CASELINES)/COURT ONLINE<p>
 <p>Magistrate Court<p>
 <p>Regional Court<p>
 <p>Labour Court<p>
