--- a/About.html
+++ b/About.html
@@ -83,7 +83,7 @@ Think Once, Think Twice, Think Service & Delivery...
 
 <section id="B7">
 <h1>LOCATION & UPLIFTMENT</h1>
-<p>High court (CASELINES)/COURT ONLINE<p>
+<p>High court (CASELINES/COURT ONLINE)<p>
 <p>Magistrate Court<p>
 <p>Regional Court<p>
 <p>Labour Court<p>
@@ -101,8 +101,10 @@ Think Once, Think Twice, Think Service & Delivery...
 <p>Urgent and after hour deliverey services.<p>
 <p>.All documents are provided with Tracking Numbers.<p>
 <h2><h2>
-<p>Yvonne Niemand<p>
+<p>Yvonne <p>
 <p>ydlegalservices3@gmail.com<p>
+ <p>Debbie</p>
+ <p>ydlegalservices10@gmail.com</p>
 </section>
 
 <section id="B9">
