--- a/About.html
+++ b/About.html
@@ -20,7 +20,7 @@
             <a href="Contact.html"> Contact</a>
     </nav>
     </div>   
-<h1>Y & D Legal Courier Services (Pty) Ltd</h1>
+<h1>Y & D Legal Courier Services </h1>
 <section id="B1">
 <p>  Established since 2016
 Think Once, Think Twice, Think Service & Delivery...
@@ -37,7 +37,7 @@ Think Once, Think Twice, Think Service & Delivery...
 <h1>COMPANY PROFILE</h1>
 <h1></h1>
 <h1>YVONNE:  076 201 0410</h1>
-<p>We are dedicated to the collecion, issuing & delivering of all legal</p>
+<p>We are dedicated to the collection, issuing & delivering of all legal</p>
 <p>documents for law firms, advocated, financial institutions and other</p>
 <p>establishments.</p>
 <p>Our dedicated team at Y & D Legal Courier Services has the neccessary</p>
@@ -51,15 +51,15 @@ Think Once, Think Twice, Think Service & Delivery...
 <h1>COURT PROCESSES - HIGH COURT, MAGISTRATE COURT AND REGIONAL COURT</h1>
 
 
-<p>Collect, issue and deliver to sheriff, filling of process and return.</p>
-<p>Serve & return, serving and filling.  Trial date applications and </p>
+<p>Collect, issue and deliver to sheriff, filing of process and return.</p>
+<p>Serve & return, serving and filing.  Trial date applications and </p>
 <p>more .......</p>
 </section>
 
 <section id="B4">
 <h1>Our highly-expierience staff are equipped to tackle any challenges</h1>
 
-<p>Our highly-expierience staff are equipped to tackle any challenges</p>
+<p>Our highly-expierienced staff are equipped to tackle any challenges</p>
 <p>while maintaining a professionel and respectful relationship with our clients</p>
 <p>Y & D Legal Courier Services assists attorneys,conveyancer and other</p>
 <p>professionals with our broad based services which includes:
@@ -74,7 +74,7 @@ Think Once, Think Twice, Think Service & Delivery...
 <section id="B6">
 <h1>LOCATION & UPLIFTMENT</h1>
 <p>Court file location and up-liftment of copies & Judgements -<p>
-<p>Defaults/Warrants/Court Orders & Section 65 ect.<p>
+<p>Defaults/Warrants/Court Orders, ect.<p>
 <p>SHERRIF OFFICE<p>
 <p>Y & D Legal Courier Services attends all Sheriff Offices on a daily basis<p>
 <p>to deliver summonses and collect Return of Service Receipts.<p>
@@ -89,7 +89,7 @@ Think Once, Think Twice, Think Service & Delivery...
 <p>Labour Court<p>
 <p>Master Office (Estates, Trusts, L & D Account ect...)<p>
 <p>Deeds Office (Title Deeds, Sectional Titles ect...)<p>
-<p>Indexing & Pagnation <p>
+<p>Indexing & Pagination <p>
 <p>Municipality (Clearances ect...)<p>
 <p>CCMA<p>
 </section>
